	PR c++/11702 	* NEWS: Add entry. 	* dwarf2read.c (dwarf2_add_field): If DW_AT_const_value is present, 	create a symbol for the field and record the value. 	(new_symbol): Handle DW_TAG_member. 	* gdbtypes.c (field_is_static): Remove FIXME. 	* symtab.c (search_symbols): When searching for VARIABLES_DOMAIN, 	only ignore LOC_CONST symbols that are enums.

testsuite/
	Test PR c++/11702.
	* gdb.cp/m-static.exp: Add testcase.
	* gdb.cp/m-static.h (gnu_obj_4): Add initialized static const member.